Added patches from Fumio Yamamoto for various fixes.
Removed all the libpng/zlib .c files from the glgpng directory, use host system libpng instead (fix debian bug #318026).
Fix to work with non-US keyboards.
Added more sky label languages.
Sky languages are no longer hard coded.
Cardinal points are now translated based on sky language.
TUI is now using gettext.
Fixed various typos and other bugs.
Added a Loading Bar class.
Started a code spring clean aiming at removing the design mistakes with the core class. The goal is to split the current stel_core into 2 classes, one being the actual core managing sky display, the other one stel_app will manage all I/O, parameters managment, UI, locales etc..
Added fader on stars labels.
Added loading bars for nebulae and stars loading.
Corrected Sun rotational period
Added missing hipparcos stars to database
Added splash screen, new icons and improved pointers by Johan.
Improved Milky Way tone conversion. 
Sky labels now default to user locale language if possible
Added fader on nebula hints (hints can now draw even when atmosphere is on)
	
0.6.2 [2004-11-18]
Fixed time display bug (1 hour ahead of actual sky time during standard time if your timezone has daylight savings).  
NOTE: Time is only displayed as standard time (no daylight savings effects).
Fixed Milky Way drawing incorrectly (inside out) in desktop mode.
Fixed Milky Way always on regardless of config setting.
Fixed atmosphere flashing bug (for the final time, we hope).

0.6.1 [2004-10-17]
Added time control buttons on bottom right part of the screen.
Fixed the flashy background bug when zooming out too much in fisheye mode.
Fixed landscape gap bug in textures on some 3D card on windows.
Added all the impressive constellation art images by Johan Meuris.
Applied patches from Fumio Yamamoto for MacOSX portability.
Recoded landscape ground displaying.
Added a nice landscape from a panorama made in my own village!